Fix missing dependency for clang tests on checked-c-convert.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND CLANG_TEST_DEPS
   c-index-test diagtool
   clang-tblgen
   clang-offload-bundler
+  checked-c-convert
   )
   
 if(CLANG_ENABLE_STATIC_ANALYZER)
